Added Android files

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ PC_Code/mavlink_test1/.vs/
 PC_Code/mavlink_test1/bin/
 PC_Code/mavlink_test1/obj/
 PC_Code/mavlink_test1/packages/
+Android_Code/visir_android2/.vs/
+Android_Code/visir_android2/VisirApp2/bin/
+Android_Code/visir_android2/VisirApp2/obj/
