--- a/Android_Code/visir_android2/VisirApp2/Properties/AndroidManifest.xml
+++ b/Android_Code/visir_android2/VisirApp2/Properties/AndroidManifest.xml
@@ -11,7 +11,7 @@
   <uses-feature android:name="android.hardware.location.gps" android:required="false" />
   <uses-feature android:name="android.hardware.location.network" android:required="false" />
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
-    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyButZA74OH_hCDFb1gvQIcMEs29qFsfICo" />
+    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="EMPTY" />
     <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
   </application>
 </manifest>
