--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ PC_Code/mavlink_test1/packages/
 Android_Code/visir_android2/.vs/
 Android_Code/visir_android2/VisirApp2/bin/
 Android_Code/visir_android2/VisirApp2/obj/
+Android_Code/visir_android2/VisirApp2/Properties/AndroidManifest.xml
